--- a/Learningtocode.ipynb
+++ b/Learningtocode.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDYFqAokhe8TwgvzZhS2PU",
+      "authorship_tag": "ABX9TyPnyhCLJajAHA66/gT0lvlU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Benjamindelpino/Benjamin/blob/main/Learningtocode.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Conceptos basicos"
+      ],
+      "metadata": {
+        "id": "fphSPBc0xzcX"
+      }
     },
     {
       "cell_type": "markdown",
@@ -50,7 +59,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -94,7 +103,7 @@
           "height": 35
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -153,7 +162,7 @@
         "id": "2j3F_77062PA",
         "outputId": "26ed8fc0-b999-4da6-e67a-5d6c11d9fa14"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -231,7 +240,7 @@
         "id": "dyahRnpu8hvG",
         "outputId": "48a55c31-c920-4414-86a0-8fbc07145fc4"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -257,7 +266,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1135,7 +1144,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Lista"
+        "# Lista"
       ],
       "metadata": {
         "id": "oHwoBc60En-C"
@@ -1144,7 +1153,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Conceptos basicos de las listas"
+        "## Conceptos basicos de las listas"
       ],
       "metadata": {
         "id": "a_kgMHiZKnBR"
@@ -1314,7 +1323,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Metodos y funciones que NO modifican las listas"
+        "## Metodos y funciones que NO modifican las listas"
       ],
       "metadata": {
         "id": "m38m2WtDGoe7"
@@ -1437,7 +1446,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Metodos y funciones que SI modifican las listas"
+        "## Metodos y funciones que SI modifican las listas"
       ],
       "metadata": {
         "id": "jFhHox8vGuDN"
@@ -1639,7 +1648,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Diccionarios\n",
+        "# Diccionarios\n",
         "\n",
         "Es una coleccion de pares formados por una clave y valor asociado a la clave\n",
         "\n",
@@ -1940,7 +1949,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Estructura de flujos"
+        "# Estructura de flujos"
       ],
       "metadata": {
         "id": "qOwLqR-xPu0c"
@@ -2106,7 +2115,7 @@
         "id": "oGDH69J2UHDb",
         "outputId": "1aa45081-562c-4119-d431-ce232fc3f8df"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2134,7 +2143,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2162,7 +2171,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2189,7 +2198,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2217,7 +2226,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2251,7 +2260,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2283,7 +2292,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2308,8 +2317,7 @@
         "#Como en esta linea de codigo, el For iterativo no tiene una terminacion temprana, es decir, se completa, podemos agregar un else:\n",
         "\n",
         "else:\n",
-        "    print(\"Attempted 5 times and failed\")\n",
-        ""
+        "    print(\"Attempted 5 times and failed\")\n"
       ],
       "metadata": {
         "id": "SMJx0dOdyDna",
@@ -2318,7 +2326,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2356,7 +2364,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2394,7 +2402,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2434,7 +2442,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2467,7 +2475,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2498,7 +2506,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2516,7 +2524,196 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## FUNCIONES\n",
+        "## Mas repaso de bucles\n",
+        "\n",
+        "while, for, break, continue\n"
+      ],
+      "metadata": {
+        "id": "Qdt6TQ9xz2NP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#El while ya lo vimos en \"Ejemplo if\""
+      ],
+      "metadata": {
+        "id": "5b4ytgUR0nBR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''\n",
+        "El for permite iterar clases iterables, ejecutando la\n",
+        "sección de código tantas veces como elementos tiene el iterable.\n",
+        "'''\n",
+        "\n",
+        "for HOLA in range(3):\n",
+        "    print(HOLA)"
+      ],
+      "metadata": {
+        "id": "kyyZAYed1Umd",
+        "outputId": "843a7c8a-291c-4a3e-c203-cbf6f7722c3f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(HOLA)\n",
+        "#Vemos que aca solo nos devuelve el valor final del loop.\n",
+        "'''\n",
+        "This behavior demonstrates variable scope in Python - the\n",
+        "loop variable HOLA remains accessible after the loop ends,\n",
+        "holding its final value.\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "HGW-7x0T2t9K",
+        "outputId": "1f1d332a-2b88-4d6d-cfcd-6c9612433117",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "    if i == 1:\n",
+        "        continue\n",
+        "    print(i)\n",
+        "'''\n",
+        "Aca el if + continue hacen que la secuencia se saltee\n",
+        "el numero 1 y continue con los valores siguientes.\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "sftqpyOd35Ig",
+        "outputId": "77415ed5-5ca6-4e09-908d-01e6d8dcc06b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 107
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\nAca el if + continue hacen que la secuencia se saltee\\nel numero 1 y continue con los valores siguientes.\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Por último, el break rompe la ejecución del bucle, saliendo del mismo.\n",
+        "\n",
+        "\n",
+        "x = 0\n",
+        "while True:\n",
+        "\n",
+        "    print(x)\n",
+        "\n",
+        "    if x == 3:\n",
+        "        break\n",
+        "\n",
+        "    x += 1"
+      ],
+      "metadata": {
+        "id": "-4WcMzJG5Ml-",
+        "outputId": "db328e4d-d957-494d-e0f0-83be29323970",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Fijarse en las identaciones del codigo de arriba.\n",
+        "La funcion comienza con la variable x y la funcion de while.\n",
+        "De ahi surge la primera identacion que contiene el print, el if y la condicion de x+=1.\n",
+        "El \"if\" tiene otra identacion que adentro tiene el break. El Break solo aplica para cuando se cumple el if."
+      ],
+      "metadata": {
+        "id": "CBWTfDEX6lcf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Conclusiones:\n",
+        "\n",
+        "El for inicia un bucle por un periodo predeterminado, wl while inicia un bucle que se ejecuta hasta que se cumple una condicion.\n"
+      ],
+      "metadata": {
+        "id": "Q9nT8Guv56J2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# FUNCIONES\n",
         "\n",
         "Es un bloque de codigo que asociado a un nombre que puedo ejecutar muchas veces"
       ],
@@ -2758,7 +2955,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2774,7 +2971,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Importar Libreria"
+        "# Importar Libreria para leer archivos"
       ],
       "metadata": {
         "id": "ifRHelwHW8TR"
@@ -3293,196 +3490,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## BUCLES\n",
-        "\n",
-        "while, for, break, continue\n"
-      ],
-      "metadata": {
-        "id": "Qdt6TQ9xz2NP"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#El while ya lo vimos en \"Ejemplo if\""
-      ],
-      "metadata": {
-        "id": "5b4ytgUR0nBR"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "'''\n",
-        "El for permite iterar clases iterables, ejecutando la\n",
-        "sección de código tantas veces como elementos tiene el iterable.\n",
-        "'''\n",
-        "\n",
-        "for HOLA in range(3):\n",
-        "    print(HOLA)"
-      ],
-      "metadata": {
-        "id": "kyyZAYed1Umd",
-        "outputId": "843a7c8a-291c-4a3e-c203-cbf6f7722c3f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "1\n",
-            "2\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(HOLA)\n",
-        "#Vemos que aca solo nos devuelve el valor final del loop.\n",
-        "'''\n",
-        "This behavior demonstrates variable scope in Python - the\n",
-        "loop variable HOLA remains accessible after the loop ends,\n",
-        "holding its final value.\n",
-        "'''"
-      ],
-      "metadata": {
-        "id": "HGW-7x0T2t9K",
-        "outputId": "1f1d332a-2b88-4d6d-cfcd-6c9612433117",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for i in range(5):\n",
-        "    if i == 1:\n",
-        "        continue\n",
-        "    print(i)\n",
-        "'''\n",
-        "Aca el if + continue hacen que la secuencia se saltee\n",
-        "el numero 1 y continue con los valores siguientes.\n",
-        "'''"
-      ],
-      "metadata": {
-        "id": "sftqpyOd35Ig",
-        "outputId": "86a213b6-c023-49ea-fa1b-641e8861b7b4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 107
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "2\n",
-            "3\n",
-            "4\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'\\nAca el if + continue hacen que la secuencia se saltee \\nel numero 1 y continue con los valores siguientes.\\n'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#Por último, el break rompe la ejecución del bucle, saliendo del mismo.\n",
-        "\n",
-        "\n",
-        "x = 0\n",
-        "while True:\n",
-        "\n",
-        "    print(x)\n",
-        "\n",
-        "    if x == 3:\n",
-        "        break\n",
-        "\n",
-        "    x += 1"
-      ],
-      "metadata": {
-        "id": "-4WcMzJG5Ml-",
-        "outputId": "db328e4d-d957-494d-e0f0-83be29323970",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "1\n",
-            "2\n",
-            "3\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Fijarse en las identaciones del codigo de arriba.\n",
-        "La funcion comienza con la variable x y la funcion de while.\n",
-        "De ahi surge la primera identacion que contiene el print, el if y la condicion de x+=1.\n",
-        "El \"if\" tiene otra identacion que adentro tiene el break. El Break solo aplica para cuando se cumple el if."
-      ],
-      "metadata": {
-        "id": "CBWTfDEX6lcf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "###Conclusiones:\n",
-        "\n",
-        "El for inicia un bucle por un periodo predeterminado, wl while inicia un bucle que se ejecuta hasta que se cumple una condicion.\n"
-      ],
-      "metadata": {
-        "id": "Q9nT8Guv56J2"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Clases\n",
+        "# Clases\n",
         "\n",
         "El uso de (class) nos permite crear clases. Las clases son el núcleo de la programación orientada a objetos, y son una especie de estructura de datos que agrupa un conjunto de funciones (métodos) y variables (atributos)."
       ],
@@ -3529,7 +3537,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Excepciones\n",
+        "# Excepciones\n",
         "\n",
         "Nos permiten tratar el que hacer cuando las cosas salen como no esperabamos."
       ],
